--- a/index.html
+++ b/index.html
@@ -273,11 +273,11 @@
 
 					<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-					<p>Si tuviera que describirme solo con 3 palabras, elgiría: comprometida, creativa y empatica. 
-						Mi años de experiencia y el trabajo en grupo, me han ayudado y me han brindado la posibilidad de poder sentirme cómoda 
-						trabajando en equipos. <br/>
+					<p>Cada vez que me presento, me gusta hacerlo diciendo que soy una persona comprometida, creativa y empatica. 
+						Mi años de experiencia y el trabajo en grupo, me han brindado la posibilidad de poder sentirme cómoda 
+						trabajando en equipos y de entender mi trabajo y el de cada compañero/a, como fundamental en una cadena. <br/>
 						Soy consciente de la confianza que debo brindarle a las personas con las que trabajo, por eso me preocupo mucho por hacer bien lo que me corresponde.
-						Entiendo que un trabajo ecelente, parte de la confianza y la armonía del grupo para que lleguen a un buen lugar. 
+						Entiendo que un trabajo excelente, parte de la confianza y la armonía del grupo para que lleguen a un buen lugar. 
 					</p>
 
 				</div>
